--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,12 +33,19 @@ android {
 }
 
 dependencies {
-    implementation project(":core")
+    // Default
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+
+    // OpenLogin
+    implementation project(":core")
+
+    // Google login
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
