--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
+    // Encoding
+    implementation 'com.google.code.gson:gson:2.8.6'
+
     // OpenLogin
     implementation project(":core")
+    implementation 'org.web3j:core:4.6.0-android'
+    implementation('org.bitcoinj:bitcoinj-core:0.15.10') { exclude group: 'org.bouncycastle' }
 
     // Test
     testImplementation 'junit:junit:4.+'
