--- a/core/build.gradle
+++ b/core/build.gradle
@@ -40,8 +40,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
 
     // Encoding
-    implementation 'commons-codec:commons-codec:1.15'
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    // Crypto
+    implementation 'org.web3j:core:4.6.0-android'
 
     // Test
     testImplementation 'junit:junit:4.+'
