--- a/core/build.gradle
+++ b/core/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
     // Crypto
     implementation 'org.web3j:core:4.6.0-android'
+    implementation('org.bitcoinj:bitcoinj-core:0.15.10') { exclude group: 'org.bouncycastle' }
 
     // Test
     testImplementation 'junit:junit:4.+'
