--- a/core/build.gradle
+++ b/core/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
 
+    // Custom Tabs
+    implementation 'androidx.browser:browser:1.3.0'
+
     // Encoding
     implementation 'com.google.code.gson:gson:2.8.6'
 
