--- a/core/build.gradle
+++ b/core/build.gradle
@@ -14,13 +14,14 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
+        consumerProguardFiles "proguard-rules.pro"
     }
 
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            consumerProguardFiles 'proguard-rules.pro'
         }
     }
     compileOptions {
@@ -43,11 +44,11 @@ dependencies {
     implementation 'androidx.browser:browser:1.4.0'
 
     // Encoding
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.8.9'
 
     // Crypto
-    implementation 'org.web3j:core:4.6.0-android'
-    implementation('org.bitcoinj:bitcoinj-core:0.15.10') { exclude group: 'org.bouncycastle' }
+    implementation 'org.web3j:core:4.8.9'
+    implementation('org.bitcoinj:bitcoinj-core:0.16.1') { exclude group: 'org.bouncycastle' }
 
     // Test
     testImplementation 'junit:junit:4.+'
