--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,14 +4,11 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    compileSdkVersion 31
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 31
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "proguard-rules.pro"
@@ -40,15 +37,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
 
+    // Completable Futures support
+    implementation 'net.sourceforge.streamsupport:streamsupport-cfuture:1.7.4'
+
     // Custom Tabs
     implementation 'androidx.browser:browser:1.4.0'
 
     // Encoding
     implementation 'com.google.code.gson:gson:2.8.9'
-
-    // Crypto
-    implementation 'org.web3j:core:4.8.9'
-    implementation('org.bitcoinj:bitcoinj-core:0.16.1') { exclude group: 'org.bouncycastle' }
 
     // Test
     testImplementation 'junit:junit:4.+'
