--- a/core/build.gradle
+++ b/core/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.2'
 
     // Completable Futures support
-    implementation 'net.sourceforge.streamsupport:streamsupport-cfuture:1.7.4'
+    api 'net.sourceforge.streamsupport:streamsupport-cfuture:1.7.4'
 
     // Custom Tabs
     implementation 'androidx.browser:browser:1.4.0'
