--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.web3auth.core">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <application
+        android:name=".Web3AuthApp"/>
+
     <queries>
         <intent>
             <action android:name="android.support.customtabs.action.CustomTabsService" />
