--- a/core/build.gradle
+++ b/core/build.gradle
@@ -68,7 +68,7 @@ dependencies {
     implementation 'org.web3j:core:4.8.8-android'
 
     //session-manager-sdk
-    implementation 'com.github.grvgoel81:session-manager-android:0.0.1'
+    implementation 'com.github.Web3Auth:session-manager-android:0.0.1'
 
     // Test
     testImplementation 'junit:junit:4.+'
