--- a/core/build.gradle
+++ b/core/build.gradle
@@ -65,7 +65,7 @@ dependencies {
 
     // android security
     implementation 'androidx.security:security-crypto:1.1.0-alpha06'
-    implementation 'org.web3j:core:4.9.5'
+    implementation 'org.web3j:core:4.8.8-android'
 
     //session-manager-sdk
     implementation 'com.github.Web3Auth:session-manager-android:0.0.5'
