--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
 
     <application
         android:allowBackup="true"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat">
+        android:supportsRtl="true">
 
         <activity android:name="com.web3auth.core.WebViewActivity" />
 
