--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
 
     // Encoding
     implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'org.web3j:core:4.8.8-android'
 
     // Web3Auth
     implementation project(":core")
