feat: add theme for WebViewActivity
Signed-off-by: Gaurav Goel <gaurav@tor.us>

--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:allowBackup="true"
         android:supportsRtl="true">
 
-        <activity android:name="com.web3auth.core.WebViewActivity" />
+        <activity
+            android:name="com.web3auth.core.WebViewActivity"
+            android:theme="@style/Theme.AppCompat" />
 
     </application>
 
