feat: manifest file enhancements for EncryptedShredPreferences
Signed-off-by: Gaurav Goel <gaurav@tor.us>

--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
     </queries>
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
+        android:fullBackupContent="false"
         android:supportsRtl="true">
 
         <activity
