--- a/core/build.gradle
+++ b/core/build.gradle
@@ -19,7 +19,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            consumerProguardFiles 'proguard-rules.pro'
+            consumerProguardFiles 'proguard-rules.pro', 'gson.pro', 'retrofit2.pro'
         }
     }
     compileOptions {
