feat: added separate activity for customchrometabs.
Signed-off-by: Gaurav Goel <gaurav@tor.us>

--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
             android:name="com.web3auth.core.WebViewActivity"
             android:theme="@style/Theme.AppCompat" />
 
+        <activity android:name=".CustomChromeTabsActivity" />
+
     </application>
 
 </manifest>
