--- a/core/build.gradle
+++ b/core/build.gradle
@@ -29,6 +29,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    namespace 'com.web3auth.core'
 }
 
 allprojects {
@@ -72,6 +73,14 @@ dependencies {
     implementation 'com.github.Web3Auth:session-manager-android:1.3.0'
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01"
+
+    implementation 'androidx.credentials:credentials-play-services-auth:1.3.0-beta02'
+    implementation 'androidx.credentials:credentials:1.3.0-beta02'
+
+    implementation 'org.torusresearch:fetch-node-details-java:4.1.0'
+    implementation 'com.github.grvgoel81:torus-utils-java:5.0.8'
+
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1"
 
     // Test
     testImplementation 'junit:junit:4.+'
