--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,6 +5,17 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        release {
+            storeFile file('/Users/gaurav/Desktop/Web3Auth/web3auth-android-sdk/web3auth.keystore.jks')
+            storePassword 'torus123'
+            keyAlias 'key0'
+            keyPassword 'torus123'
+        }
+        debug {
+
+        }
+    }
     compileSdk 34
 
     defaultConfig {
@@ -20,6 +31,7 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             consumerProguardFiles 'proguard-rules.pro', 'gson.pro', 'retrofit2.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
@@ -77,7 +89,7 @@ dependencies {
     implementation 'androidx.credentials:credentials-play-services-auth:1.3.0-beta02'
     implementation 'androidx.credentials:credentials:1.3.0-beta02'
 
-    implementation 'org.torusresearch:fetch-node-details-java:4.1.0'
+    implementation 'org.torusresearch:fetch-node-details-java:5.0.0'
     implementation 'com.github.grvgoel81:torus-utils-java:5.0.8'
 
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1"
