--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,11 +12,11 @@ android {
             keyPassword 'torus123'
         }
     }
-    compileSdkVersion 34
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.web3auth.app"
-        minSdkVersion 24
+        minSdkVersion 26
         targetSdkVersion 34
         versionCode 1
         versionName "1.0"
