feat: minifyEnable true in release mode.
Signed-off-by: Gaurav Goel <gaurav@tor.us>

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -17,7 +17,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnable true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             consumerProguardFiles 'proguard-rules.pro', 'gson.pro', 'retrofit2.pro'
         }
